# odb4py

./: CHANGELOG.md  CITATION.cff  README.md  README.rst  __init__.py  llms.md  pyproject.toml  test.py
.github/workflows/: publish.yml
bindings/: .nc_module.c.swp  CMakeLists.txt  convert.c  core.c  dbarray_module.c  dca_module.c  dict_module.c  geo_module.c  info.c  info_module.c  io_module.c  main.c  nc_module.c  nc_module.h  odc_module.c  sqlite_module.c
docs/: api.rst  conf.py  index.rst  inspect_odb.rst  introduction.rst  licence.rst  odb_conversion.rst  odb_dca.rst  open_odb_loop.rst
docs/_build/doctrees/: api.doctree  data_retrieval.doctree  environment.pickle  index.doctree  index_.doctree  inspect_odb.doctree  installation.doctree  introduction.doctree  licence.doctree  odb_conversion.doctree  odb_dca.doctree  odb_in_python_ecosystem.doctree  odb_io.doctree  odb_utilities.doctree  open_odb_loop.doctree  references.doctree
docs/_build/doctrees/api/: api.doctree  odb_dca.doctree  odb_utilities.doctree
docs/_build/doctrees/ecosystem/: odb_in_python_ecosystem.doctree
docs/_build/doctrees/references/: references.doctree
docs/_build/doctrees/usage/: data_retrieval.doctree  inspect_odb.doctree  odb_conversion.doctree  odb_dca.doctree  odb_in_python_ecosystem.doctree  odb_io.doctree  odb_utilities.doctree  open_odb_loop.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  Dependencies.html  api.html  data_retrieval.html  genindex.html  index.html  index_.html  inspect_odb.html  installation.html  introduction.html  licence.html  objects.inv  odb_conversion.html  odb_dca.html  odb_in_python_ecosystem.html  odb_io.html  odb_utilities.html  open_odb_loop.html  references.html  search.html  searchindex.js
docs/_build/html/_sources/: data_retrieval.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  odb_in_python_ecosystem.rst.txt  odb_utilities.rst.txt
docs/_build/html/_sources/api/: api.rst.txt  odb_utilities.rst.txt
docs/_build/html/_sources/usage/: inspect_odb.rst.txt  odb_conversion.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/_build/html/api/: api.html  odb_dca.html  odb_utilities.html
docs/_build/html/ecosystem/: odb_in_python_ecosystem.html
docs/_build/html/references/: references.html
docs/_build/html/usage/: data_retrieval.html  inspect_odb.html  odb_conversion.html  odb_dca.html  odb_in_python_ecosystem.html  odb_io.html  odb_utilities.html  open_odb_loop.html
docs/api/: api.rst
docs/references/: references.rst
docs/source/: conf.py
docs/usage/: data_retrieval.rst  inspect_odb.rst  odb_conversion.rst  odb_dca.rst  odb_in_python_ecosystem.rst  odb_io.rst  odb_utilities.rst  open_odb_loop.rst
examples/py/: example1.py  example2.py  example3.py  example4.py  example5.py
include/: map_dtype.h  ncdf.h  pyspam.h  rows.h  sql_build.h
odb/src/aux/: odbdump.c
odb/src/lib/: poolmasking.c
utils/: __init__.py  odb_glossary.py  odb_ob.py  parser.py
