[project]
name = "odb4py"
version = "1.3.4rc1"

description = "odb4py is a Python interface for ECMWF ODB1 databases, developed at the Royal Meteorological Institute of Belgium (RMI)."
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Idir Dehmous", email = "idehmous@meteo.be" }
     ]
maintainers = [
    { name = "Idir Dehmous - Royal Meteorological Institute of Belgium" }
]


license = { text = "Apache-2.0" }

keywords = [
  "RMI",
  "KMI",
  "observation", 
  "ODB",
  "meteorology",
  "python",
  "database",
  "extension",
  "C" 
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux"
]

[project.urls]
Homepage      = "https://github.com/idirdehmous/odb4py"
Source        = "https://github.com/idirdehmous/odb4py"
Documentation = "https://odb4py.readthedocs.io"


[build-system]
requires = [
  "scikit-build-core>=0.5.1",
  "numpy>=2",
  "setuptools",
  "wheel",
  "packaging>=23"
]
build-backend = "scikit_build_core.build"



[tool.scikit-build]
build.verbose     = true
cmake.args        = ["-G", "Unix Makefiles"]  
cmake.source-dir  = "."
wheel.install-dir = "odb4py"

# Before all : Install the necessary libs  in the docker container 
# ecbuild, eckit and odc are NOT available with yum install --> build & install with cmake 
[tool.cibuildwheel.linux]
before-all = """yum install -y netcdf-devel && yum install -y sqlite-devel 
yum install -y flex flex-devel bison &&  source /opt/rh/devtoolset-10/enable

yum install -y gcc gcc-c++ make cmake git
git clone https://github.com/ecmwf/ecbuild.git
cd ecbuild && mkdir build && cd build && cmake .. && make -j && make install

git clone https://github.com/ecmwf/eckit.git
cd eckit && mkdir build && cd build  &&  cmake .. && make -j2 && make install

git clone https://github.com/ecmwf/odc.git
cd odc && mkdir build && cd build  &&    cmake .. && make -j2 && make install"""


[tool.cibuildwheel]
archs  = ["x86_64"]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip   ="*musllinux*"
manylinux-x86_64-image = "manylinux2014"
build-verbosity = 1
